--- a/app/views/current/views/slurry/check-answers-project-details-and-benefits.html
+++ b/app/views/current/views/slurry/check-answers-project-details-and-benefits.html
@@ -52,21 +52,21 @@ Check your answers
           {{ data['new-slurry'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="collaboration">
+          <a class="govuk-link" href="new-slurry">
             Change<span class="govuk-visually-hidden"> other processes, techniques, or equipment</span>
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Other farms supplied with water
+          Other businesses partnered or collaborated with
         </dt>
         <dd class="govuk-summary-list__value">
           {{ data['collaboration'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="collaboration">
-            Change<span class="govuk-visually-hidden"> other farms supplied with water</span>
+            Change<span class="govuk-visually-hidden"> other businesses partnered or collaborated with</span>
           </a>
         </dd>
       </div>
