--- a/app/views/current/views/slurry/collaboration.html
+++ b/app/views/current/views/slurry/collaboration.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="collaboration-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                How many other businesses would the project involve working in partnership or collaboration with?
+                How many other businesses will you work in partnership or collaborate with?
               </h1>
             </legend>
             <div class="govuk-radios">
