--- a/app/views/current/views/slurry/confirmation.html
+++ b/app/views/current/views/slurry/confirmation.html
@@ -30,7 +30,7 @@
       <li>send an email to invite you to make a full application or explain why you were not successful</li>
       </ul>
 
-      <p>You will find out if you need to do a full application before DD MONTH YYYY.</p>
+      <p>You will find out if you need to do a full application before 26 July 2021.</p>
 
       <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
