--- a/app/views/current/views/slurry/country.html
+++ b/app/views/current/views/slurry/country.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Is the planned project in England?
+                Will the planned project or machinery be in England?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
