--- a/app/views/current/views/slurry/farming-type.html
+++ b/app/views/current/views/slurry/farming-type.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Is the project for a livestock, dairy, arable or horticultural farm business?
+                Is the planned project or machinery for a livestock, dairy, arable or horticultural farm business?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
