--- a/app/views/current/views/slurry/new-slurry.html
+++ b/app/views/current/views/slurry/new-slurry.html
@@ -17,7 +17,7 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="new-slurry">
-              How will the project be introducing new processes, techniques, or equipment?
+              How will the project introduce new processes, techniques or equipment?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="new-slurry" name="new-slurry" rows="8" aria-describedby="new-slurry-hint">{{ data['new-slurry'] }}</textarea>
