--- a/app/views/current/views/slurry/project-items.html
+++ b/app/views/current/views/slurry/project-items.html
@@ -28,7 +28,14 @@ Which items eligible for grant funding are included in the project?
             <h2 class="govuk-heading-m govuk-!-margin-top-6">Slurry and digestate management equipment</h2>
 
             <div id="project-items-hint" class="govuk-hint">
-                All slurry and digestate management equipment must include inline nutrient sensors, flow meters, adjustable flow control valves, a GPS receiver and an in-cab display / control unit.
+                All slurry and digestate management equipment must include:
+                <ul>
+                <li>inline nutrient sensors</li>
+                <li>flow meters</li>
+                <li>adjustable flow control valves</li>
+                <li>GPS receiver</li>
+                <li>in-cab display/control unit</li>
+                </ul>
               </div>
 
               <h3 class="govuk-heading-s govuk-!-margin-top-5">Low emission precision application equipment</h3>
@@ -60,27 +67,32 @@ Which items eligible for grant funding are included in the project?
               <input class="govuk-checkboxes__input" id="project-items-4" name="project-items" type="checkbox" value="umbilical system" data-aria-controls="conditional-umbilical-conditional conditional-digestate-conditional"
                 {{ checked("project-items", "umbilical system") }}>
               <label class="govuk-label govuk-checkboxes__label" for="project-items-4">
-                Slurry / digestate umbilical system
+                Slurry/digestate umbilical system
               </label>
               <div id="project-item-hint" class="govuk-hint govuk-checkboxes__hint">
-                Must include a pump, macerator and reeler
-              </div>
+                Must include a:
+                <ul class="govuk-!-margin-top-1">
+                <li>pump</li>
+                <li>macerator</li>
+                <li>reeler</li>
+                </ul>
             </div>
+          </div>
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="project-items-5" name="project-items" type="checkbox" value="tanker" data-aria-controls="conditional-digestate-conditional" {{ checked("project-items", "tanker") }}>
               <label class="govuk-label govuk-checkboxes__label" for="project-items-5">
-                Slurry / digestate tanker
+                Slurry/digestate tanker
               </label>
             </div>
 
-            <h2 class="govuk-heading-m govuk-!-margin-top-8">Slurry / digestate storage bags</h2>
+            <h2 class="govuk-heading-m govuk-!-margin-top-8">Slurry/digestate storage bags</h2>
 
             <div id="project-items-hint" class="govuk-hint">
                 Storage bags provide additional storage capacity over and above the statutory slurry storage requirement.
               </div>
 
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="project-items-6" name="project-items" type="checkbox" value="bags" {{ checked("project-items", "bags") }}>
+              <input class="govuk-checkboxes__input" id="project-items-6" name="project-items" type="checkbox" value="storage bags" {{ checked("project-items", "storage bags") }}>
               <label class="govuk-label govuk-checkboxes__label" for="project-items-6">
                 Storage bags
               </label>
@@ -105,7 +117,12 @@ Which items eligible for grant funding are included in the project?
                 Mild acidification equipment
               </label>
               <div id="project-item-hint" class="govuk-hint govuk-checkboxes__hint">
-                Must include a mixing tank, acid storage and dosing equipment.
+                Must include a:
+                <ul class="govuk-!-margin-top-1">
+                <li>mixing tank</li>
+                <li>acid storage</li>
+                <li>dosing equipment</li>
+                </ul>
               </div>
             </div>
 
