--- a/app/views/current/views/slurry/start.html
+++ b/app/views/current/views/slurry/start.html
@@ -33,7 +33,7 @@
     <p>Use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>check if you can apply for a large grant for your project (takes about 10 minutes)</li>
+      <li>check if you can apply for a large grant to buy or install machinery and equipment (takes about 10 minutes)</li>
       <li>write and send an expression of interest (takes about 30 minutes if you have all the project details)</li>
     </ul>
 
@@ -54,7 +54,7 @@
 
     <p>You need:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>to think about what items you may want to buy for the project</li>
+      <li>to think about what items you may want to buy</li>
       <li>an estimate of the total cost of the items that could get a grant</li>
     </ul>
 
