--- a/app/views/current/views/water/task-list.html
+++ b/app/views/current/views/water/task-list.html
@@ -112,7 +112,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <button class="govuk-button" data-module="govuk-button">
-            Continue
+            Check all your answers
           </button>
 
         </form>
