Change to start page
Changed text on start page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
 
       <dl class="govuk-list">
         <dt><a href="/current/views/">Version 04</a></dt>
-        <dd>Alpha sprint X - large grants expression of interest v3</dd>
+        <dd>Alpha sprint XXXX - large grants expression of interest v3</dd>
       </dl>
 
       <dl class="govuk-list">
