--- a/app/views/current/views/water/public-money.html
+++ b/app/views/current/views/water/public-money.html
@@ -21,11 +21,11 @@ Meeting the remaining project costs
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Will you use any public money to fund the remaining project costs of £{{ remainingCosts | toFixed(2) | commafy }}?
+              Can you pay the remaining project costs of £{{ remainingCosts | toFixed(2) | commafy }}?
             </h1>
           </legend>
           <div id="public-money-hint" class="govuk-hint">
-            Public money is any other capital grant funding from government or local authorities. It is not funds from the Basic Payment Scheme or other stewardship schemes.
+            You cannot use any grant funding from government or local authorities. You can use money from the Basic Payment Scheme or other stewardship schemes.
           </div>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
