--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -46,13 +46,12 @@ Have you already started work on the project?
           </span>
         </summary>
         <div class="govuk-details__text">
-          <p>You have started if you have committed to major expenditure, like buying equipment or paying a deposit.</p>
+          <p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.</p>
 
-          <p>You can:</p>
+          <p>Before you start the project, you can:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>start gathering quotes from suppliers and apply for planning permission</li>
-            <li>start construction to retain planning, like putting in foundations and hardcore</li>
-            <li>complete works that are not included in the estimated project costs</li>
+            <li>get quotes from suppliers</li>
+            <li>apply for planning permission</li>
           </ul>
 
           <p>You cannot ask for grant funding for work already done.</p>
