--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -13,9 +13,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <h1 class="govuk-heading-l">Check your answers</h1>
+    <h1 class="govuk-heading-l">Check and send your EOI</h1>
 
-    <h2 class="govuk-heading-m">Check if you can apply</h2>
+    <h2 class="govuk-heading-m">Eligibility</h2>
 
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
