--- a/app/views/current/views/water/current-irrigation.html
+++ b/app/views/current/views/water/current-irrigation.html
@@ -52,7 +52,7 @@
       </button>
 
       <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
-        Save and return
+        Save and come back later
       </button>
 
     </form>
