--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -45,7 +45,7 @@
         </button>
 
         <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
-          Save and return
+          Save and come back later
         </button>
 
       </form>
