--- a/app/views/current/views/water/project.html
+++ b/app/views/current/views/water/project.html
@@ -21,7 +21,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="project-name">
-              Project Name
+              Project name
             </label>
             <div id="project-summary-hint" class="govuk-hint">
               We will use this as a reference.
@@ -32,7 +32,7 @@
         <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="500">
           <div class="govuk-form-group">
             <label class="govuk-label" for="project-summary">
-              Project Summary
+              Project summary
             </label>
             <div id="project-summary-hint" class="govuk-hint">
               Tell us what the project is, what it will do and what it is aiming to achieve.
