content change - water [ public money page ]

--- a/app/views/current/views/water/public-money.html
+++ b/app/views/current/views/water/public-money.html
@@ -25,7 +25,7 @@ Meeting the remaining project costs
             </h1>
           </legend>
           <div id="public-money-hint" class="govuk-hint">
-            You cannot use any grant funding from government or local authorities. You can use money from the Basic Payment Scheme or other stewardship schemes.
+            You cannot use any grant funding from government or local authorities. You can use money from the Basic Payment Scheme or agri-environment schemes such as Countryside Stewardship Scheme.
           </div>
           <div class="govuk-radios govuk-radios--inline">
 
