set dropdown text - Help - water / slurry

--- a/app/views/current/views/slurry/project-start.html
+++ b/app/views/current/views/slurry/project-start.html
@@ -42,7 +42,7 @@ Have you already started work on the project?
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            Help with when a project starts
+            Help
           </span>
         </summary>
         <div class="govuk-details__text">
