cut off link to [public-money] - duplicate page

--- a/app/views/current/views/water/remaining-costs-fail.html
+++ b/app/views/current/views/water/remaining-costs-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large grant from this scheme
       </h1>
 
-      <p>Only businesses that can pay 60% of the total project cost can apply for this grant.</p>
+      <p>It is not possible to use public money towards the project costs when applying for a grant.</p>
 
     </div>
   </div>
