expand dropdown by default [water / project-start]

--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -39,7 +39,7 @@ Have you already started work on the project?
         </fieldset>
       </div>
 
-      <details class="govuk-details" data-module="govuk-details">
+      <details class="govuk-details" data-module="govuk-details" open>
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
             Help
