guidance: [rural-grants -> all-grants]

--- a/app/views/current/views/guidance/all-grants.html
+++ b/app/views/current/views/guidance/all-grants.html
@@ -5,11 +5,11 @@
 
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
-<h2 id="payments">Payments</h2>
-<p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a><br>
-Use this to apply or update your details</p>
+<h2 id="payments">Rural grants and payments claims</h2>
+<p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a> in England<br>
+Apply for a rural grant or payment, including the Basic Payment Scheme (BPS), or update your claim details</p>
 
-<h2 id="available-schemes">Available schemes</h2>
+<h2 id="available-schemes">Open for applications</h2>
 <p><a href="https://www.gov.uk/government/collections/basic-payment-scheme">Basic Payment Scheme</a><br>
 For farmers with at least 5 hectares of land.</p>
 
@@ -19,13 +19,13 @@ Funding for farmers, woodland owners, foresters and land managers to help them l
 <p><a href="https://www.gov.uk/government/collections/environmental-stewardship-guidance-and-forms-for-existing-agreement-holders">Environmental Stewardship</a><br>
 Funding for farmers and land managers who manage their land in a way that protects and helps the environment and wildlife.</p>
 
-<p><a href="small-grants">Small grants for equipment to improve productivity</a><br>
+<p><a href="small-grants">Grants for equipment to improve productivity</a><br>
 Up to £12,000 to help farmers buy specific equipment.</p>
 
-<p><a href="large-water">Large grants for water resource management projects</a><br>
+<p><a href="large-water">Grants for water resource management projects</a><br>
 Up to £1 million towards reservoirs and irrigation projects.</p>
 
-<p><a href="large-slurry">Large grants for slurry equipment</a><br>
+<p><a href="large-slurry">Grants for slurry equipment</a><br>
 Up to £1 million towards specific equipment that makes more efficient use of slurry, manure and digestate.</p>
 
 <p><a href="https://www.gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a><br>
