del green button [water-guidance -> large-water]

--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -38,7 +38,7 @@
 
 <ol>
   <li>Think about what the business needs, develop a rough plan and estimate of the project costs.</li>
-  <li>Check if you can apply</li>
+  <li><a href="../water/start">Check if you can apply</a></li>
   <li>Make an expression of interest and wait to hear back. If you are successful, you will be invited to make a full application</li>
   <li>Make a full application and wait to hear back. If this is successful, you’ll get a funding agreement</li>
   <li>Sign and return the funding agreement</li>
@@ -49,6 +49,6 @@
 
 </div>
 
-<p><a class="gem-c-button govuk-button govuk-button--start govuk-!-margin-top-4 govuk-!-margin-bottom-9" role="button" href="../water/start"> Check if you can apply now</a></p>
+<br/>
 
 {% endblock %}
