--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -8,20 +8,26 @@
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
 <div class="call-to-action">
-<h2 id="latest-news">Latest news</h2>
+<h2 id="deadlines">Deadlines</h2>
 
-<p>Water resource management grants available now. You can apply from 17 May 2021 to 28 June 2021. Your project must be completed before you can claim the funding. All claims for funding must be made before 31 March 2022.</p>
+<p>You can apply from XX September 2021 to XX October 2021. Your project must be completed before you can claim the funding. All claims for funding must be made before XX March 2022.</p>
 </div>
 
 <h2 id="who-can-apply">Who can apply</h2>
 
-<p>You can apply if you have an arable or horticultural business that grows, or intends to grow, irrigated crops for the food industry. New businesses can also apply.</p>
+<p>You can apply if:</p>
+<ul>
+  <li>your farm is in England</li>
+  <li>you grow, or intend to grow, irrigated crops for the food industry</li>
+  <li>you own the land the project will be on or have a lease for at least 5 years</li>
+</ul>
 
-<p>Only apply if the estimated project costs are over £87,500. Grants can cover up to 40% of the eligible costs of a project. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+<p>The estimated project costs are over £87,500.</p>
 
 <h2 id="what-is-the-grant-for">What is the grant for</h2>
 
-<p>It can pay up to 40% of the costs for:</p>
+<p>Grants can cover up to 40% of the eligible costs of a project. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+<p>The grant can pay up to 40% of the costs for:</p>
 
 <ul>
   <li>constructing water storage reservoirs</li>
@@ -34,11 +40,23 @@
 
 <p>The business must have a water meter or plan to install one as part of the project.</p>
 
+<h2 id="when-to-apply">When to apply</h2>
+
+<p>If your project needs planning permission or an abstraction licence, you may want to have these already before submitting your EOI.</p>
+<p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.</p>
+<p>Before you start the project, you can:</p>
+
+<ul>
+  <li>get quotes from suppliers</li>
+  <li>apply for planning permission</li>
+</ul>
+
 <h2 id="how-to-apply-for-a-large-grant">How to apply for a large grant</h2>
+<p>Once you’ve confirmed you’re eligible, you can check how well your project fits Defra’s funding priorities. You can then choose to submit a full application.</p>
 
 <ol>
   <li>Think about what the business needs, develop a rough plan and estimate of the project costs.</li>
-  <li><a href="../water/start">Check if you can apply</a></li>
+  <li><a href="../water/start">Check if you can apply and how well your project fits Defra’s priorities</a></li>
   <li>Make an expression of interest and wait to hear back. If you are successful, you will be invited to make a full application</li>
   <li>Make a full application and wait to hear back. If this is successful, you’ll get a funding agreement</li>
   <li>Sign and return the funding agreement</li>
