more content changes

--- a/app/views/current/views/guidance/all-grants.html
+++ b/app/views/current/views/guidance/all-grants.html
@@ -6,10 +6,8 @@
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
 <h2 id="payments">Rural grants and payments claims</h2>
-<p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a> in England</p>
-<ul>
-    Apply for a rural grant or payment, including the Basic Payment Scheme (BPS), or update your claim details
-</ul>
+<p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a> in England<br>
+Apply for a rural grant or payment, including the Basic Payment Scheme (BPS), or update your claim details</p>
 
 <h2 id="available-schemes">Open for applications</h2>
 <p><a href="https://www.gov.uk/government/collections/basic-payment-scheme">Basic Payment Scheme</a><br>
