--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -7,11 +7,9 @@
 
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
-<div class="call-to-action">
 <h2 id="deadlines">Deadlines</h2>
 
 <p>You can apply from XX September 2021 to XX October 2021. Your project must be completed before you can claim the funding. All claims for funding must be made before XX March 2022.</p>
-</div>
 
 <h2 id="who-can-apply">Who can apply</h2>
 
@@ -57,8 +55,7 @@
 <ol>
   <li>Think about what the business needs, develop a rough plan and estimate of the project costs.</li>
   <li><a href="../water/start">Check if you can apply and how well your project fits Defra’s priorities</a></li>
-  <li>Make an expression of interest and wait to hear back. If you are successful, you will be invited to make a full application</li>
-  <li>Make a full application and wait to hear back. If this is successful, you’ll get a funding agreement</li>
+  <li>Decide if you want to make a full application and wait to hear back. If this is successful, you'll get a funding agreement</li>
   <li>Sign and return the funding agreement</li>
   <li>Start work on your project</li>
   <li>Pay for all the work</li>
