--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -34,12 +34,8 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>check if you can apply for a large grant for your project (takes about 10 minutes)</li>
-      <li>write and send an expression of interest (takes about 30 minutes if you have all the project details)</li>
+      <li>check how well your project fits Defra’s funding priorities and provides value for taxpayers' money. (takes about 30 minutes if you have all the project details)</li>
     </ul>
-
-    <p>It can take up to a month for the Rural Payments Agency to assess an expression of interest.</p>
-
-    <p>You may be invited to make a full application if your project fits the priorities and provides value for taxpayers' money.</p>
 
     <p>You will not automatically get a grant. You are competing against other projects.</p>
 
@@ -56,6 +52,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>to think about what items you may want to buy for the project</li>
       <li>an estimate of the total cost of the items that could get a grant</li>
+      <li>either have or be confident you will have any planning permission and abstraction licences in place before XX October 2021</li>
     </ul>
 
   </div>
