edit guidance - [large-water]

--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -18,9 +18,8 @@
   <li>your farm is in England</li>
   <li>you grow, or intend to grow, irrigated crops for the food industry</li>
   <li>you own the land the project will be on or have a lease for at least 5 years</li>
+  <li>the estimated project costs are over £87,500.</li>
 </ul>
-
-<p>The estimated project costs are over £87,500.</p>
 
 <h2 id="what-is-the-grant-for">What is the grant for</h2>
 
@@ -46,7 +45,7 @@
 
 <ul>
   <li>get quotes from suppliers</li>
-  <li>apply for planning permission</li>
+  <li>apply for planning permission or an abstraction licence</li>
 </ul>
 
 <h2 id="how-to-apply-for-a-large-grant">How to apply for a large grant</h2>
