prototype changes -> up to /project-start

--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -52,6 +52,7 @@ Have you already started work on the project?
           <ul class="govuk-list govuk-list--bullet">
             <li>get quotes from suppliers</li>
             <li>apply for planning permission</li>
+            <li>apply for planning permission or an abstraction licence</li>
           </ul>
         </div>
       </details>
