--- a/app/views/current/views/water/project-cost.html
+++ b/app/views/current/views/water/project-cost.html
@@ -17,11 +17,11 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
-              What is the estimated total project cost?
+              What is the estimated cost of the items? 
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
-             Only include the costs of items available through grant funding. Do not include VAT.
+             Do not include VAT.
           </div>
           <span class="govuk-body govuk-!-margin-right-2">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
         </div>
