--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -21,7 +21,7 @@ Meeting the remaining project costs
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Can you pay the remaining project costs of £{{ remainingCosts | toFixed(2) | commafy }}?
+              Can you pay the remaining costs of £{{ remainingCosts | toFixed(2) | commafy }}?
             </h1>
           </legend>
           <div id="public-money-hint" class="govuk-hint">
