prototype changes: new pages

--- a/app/views/current/views/water/task-list.html
+++ b/app/views/current/views/water/task-list.html
@@ -71,7 +71,7 @@
                   Provide project details and benefits
                 </a>
                   {% else %}
-                <a href="project" aria-describedby="s02-status">
+                <a href="project-details" aria-describedby="s02-status">
                   Provide project details and benefits
                 </a>
                   {% endif %}
