--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -18,7 +18,7 @@
   <li>your farm is in England</li>
   <li>you grow, or intend to grow, irrigated crops for the food industry</li>
   <li>you own the land the project will be on or have a lease for at least 5 years</li>
-  <li>the estimated project costs are over £87,500.</li>
+  <li>the estimated project costs are over £87,500</li>
 </ul>
 
 <h2 id="what-is-the-grant-for">What is the grant for</h2>
