--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -26,13 +26,19 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applying" name="applying" type="radio" value="own" {{ checked("applying", "own") }}>
                 <label class="govuk-label govuk-radios__label" for="applying">
-                  I am applying for my business
+                  Farmer (the grant is for my business)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying-2" name="applying" type="radio" value="other" {{ checked("applying", "other") }}>
+                <input class="govuk-radios__input" id="applying-2" name="applying" type="radio" value="agent" {{ checked("applying", "agent") }}>
                 <label class="govuk-label govuk-radios__label" for="applying-2">
-                  I am applying on behalf of someone else's business
+                  Agent
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="applying-3" name="applying" type="radio" value="farm-manager" {{ checked("applying", "farm-manager") }}>
+                <label class="govuk-label govuk-radios__label" for="applying-3">
+                  Farm manager
                 </label>
               </div>
             </div>
