--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Business details
+  Project and business details
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,11 +13,18 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../water/new-business" method="post">
+      <form class="form" action="{{ nextUrl }}" method="post">
 
         <h1 class="govuk-heading-l">
-          Business details
+          Project and business details
         </h1>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="project-name">
+              Project name
+            </label>
+          <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
+        </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="business-name">
