--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -30,15 +30,15 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying-2" name="applying" type="radio" value="agent" {{ checked("applying", "agent") }}>
+                <input class="govuk-radios__input" id="applying-2" name="applying" type="radio" value="farm-manager" {{ checked("applying", "farm-manager") }}>
                 <label class="govuk-label govuk-radios__label" for="applying-2">
-                  Agent
+                  Farm manager (the grant is for a business I work for)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying-3" name="applying" type="radio" value="farm-manager" {{ checked("applying", "farm-manager") }}>
+                <input class="govuk-radios__input" id="applying-3" name="applying" type="radio" value="agent" {{ checked("applying", "agent") }}>
                 <label class="govuk-label govuk-radios__label" for="applying-3">
-                  Farm manager
+                  Agent
                 </label>
               </div>
             </div>
