--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <h1 class="govuk-heading-l">Check and send your EOI</h1>
+    <h1 class="govuk-heading-l">Check and submit your details to get your score</h1>
 
     <h2 class="govuk-heading-m">Eligibility</h2>
 
@@ -749,7 +749,7 @@
           </h2>
         </legend>
         <div id="waste-hint" class="govuk-hint">
-          I consent to the terms and conditions as outlined in the <a href="">large countryside productivity grant guidance</a>.
+          I consent to the terms and conditions as outlined in <a href="">Farming Transformation Fund water resource management grant guidance</a>.
         </div>
         <div class="govuk-checkboxes">
           <div class="govuk-checkboxes__item">
@@ -762,16 +762,16 @@
       </fieldset>
     </div>
 
-    <h2 class="govuk-heading-m">Now send the expression of interest</h2>
+    <h2 class="govuk-heading-m">Now submit your details to get your score</h2>
 
-    <p class="govuk-body">By sending this you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
+    <p class="govuk-body">By submitting this you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
     <form action="../water/confirmation" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
       <button class="govuk-button" data-module="govuk-button">
-        Send the expression of interest
+        Get your score
       </button>
 
     </form>
