--- a/app/views/current/views/water/confirmation.html
+++ b/app/views/current/views/water/confirmation.html
@@ -10,27 +10,26 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">Expression of interest sent</h1>
-        <div class="govuk-panel__body">
-          Reference number<br><strong>EOIJ2123F</strong>
-        </div>
+        <h1 class="govuk-panel__title">MEDIUM FIT</h1>
       </div>
 
       <p>
-        We have sent you an email to confirm that we have your expression of interest.
+        Your project seems a medium fit with Defra’s funding priorities and value for taxpayers’ money
       </p>
 
-      <h2 class="govuk-heading-m">What happens next</h2>
+      <h3 class="govuk-heading-m">What happens next</h3>
 
-      <p>We will:</p>
+      <p>Depending on how well your project has scored, you may want to submit a full application.</p>
+
+      <p>If you submit a full application, we will:</p>
+      
       <ul class="govuk-list govuk-list--bullet">
-      <li>assess the expression of interest against the others</li>
-      <li>consider how well it fits the priorities for funding</li>
+      <li>assess the application against the others</li>
+      <li>consider how well it fits the priorities for funding </li>
       <li>identify projects that provide the best value for taxpayers' money</li>
-      <li>send an email to invite you to make a full application or explain why you were not successful</li>
       </ul>
 
-      <p>You will find out if you need to do a full application before DD MONTH YYYY.</p>
+      <p>If your project receives a grant, we will send you a grant funding agreement to sign.</p>
 
       <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
