--- a/app/views/current/views/water/project-details.html
+++ b/app/views/current/views/water/project-details.html
@@ -18,11 +18,7 @@
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                The project will:
-              </h1>
-            </legend>
+            <p>The project will:</p>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="project-details" name="project-details" type="radio" value="introduce" {{ checked("project-details", "introduce") }}>
