--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the project have an abstraction licence?
+                Does the project have an abstraction licence or will have it before XX October 2021?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
@@ -33,6 +33,12 @@
                 <input class="govuk-radios__input" id="abstraction-licence-2" name="abstraction-licence" type="radio" value="no" {{ checked("abstraction-licence", "no") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-2">
                   No
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="not sure" {{ checked("abstraction-licence", "not-sure") }}>
+                <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
+                  Not sure
                 </label>
               </div>
             </div>
