set [Save and continue] => [Continue]

--- a/app/views/current/views/water/farmer-details.html
+++ b/app/views/current/views/water/farmer-details.html
@@ -40,11 +40,7 @@
 
 
 		  <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-			Save and continue
-		  </button>
-
-		  <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
-			Save and come back later
+			  Continue
 		  </button>
 
       </form>
