--- a/app/views/current/views/water/new-irrigation.html
+++ b/app/views/current/views/water/new-irrigation.html
@@ -48,11 +48,7 @@
         </div>
 
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-          Save and continue
-        </button>
-
-        <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
-          Save and come back later
+          Continue
         </button>
 
       </form>
